Image fix on mobile

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -122,7 +122,8 @@ footer
   text-align: right
 
 img
-  width: 640px
+  width: 100%
+  max-width: 640px
   margin-left: -20px
 
 ul#posts
